--- a/index.html
+++ b/index.html
@@ -1,87 +1,128 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dynamics On the Go</title>
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-  <header>
-    <h1 class="main-title">Dynamics On the Go</h1>
-    <nav class="navbar">
-      <ul>
-        <li><a href="#about">About</a></li>
-        <li><a href="#services">Services</a></li>
-        <li><a href="#testimonials">Testimonials</a></li>
-        <li><a href="#seminars">Seminars</a></li>
-        <li><a href="#contact">Contact</a></li>
-        <li><a href="#login">Login</a></li>
-      </ul>
-    </nav>
-    <div class="search-bar">
-      <input type="text" placeholder="Search..." id="search">
-      <button onclick="searchFunction()">Search</button>
-    </div>
-  </header>
+/* styles.css */
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #004d4d; /* Deep Greenish Blue */
+  color: #ffffff;
+}
 
-  <main>
-    <section id="about" class="section">
-      <h2>About Us</h2>
-      <p>Dynamics On the Go is your guide to freelancing success, providing skills training, job assistance, and certifications.</p>
-    </section>
+header {
+  background-color: #1c2b36; /* Army green */
+  color: white;
+  padding: 20px;
+  text-align: center;
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+}
 
-    <section id="services" class="section">
-      <h2>Our Services</h2>
-      <ul>
-        <li>Freelancing Skills Training</li>
-        <li>Portfolio Building</li>
-        <li>Resume Writing Assistance</li>
-        <li>Social Media Branding</li>
-        <li>Time Management Workshops</li>
-        <li>Taxation and Invoicing Guidance</li>
-        <li>Interview Preparation</li>
-        <li>Client Relationship Management</li>
-      </ul>
-    </section>
+.main-title {
+  font-size: 3em;
+  font-weight: bold;
+  color: #d40000; /* Red */
+  text-shadow: 2px 2px 4px #000000;
+}
 
-    <section id="testimonials" class="section">
-      <h2>Testimonials</h2>
-      <blockquote>"Thanks to Dynamics On the Go, I landed my first online client in just two months!"</blockquote>
-      <cite>- Anna M., Virtual Assistant</cite>
-      <blockquote>"The seminars and certifications boosted my credibility and helped me charge better rates."</blockquote>
-      <cite>- John D., Freelance Graphic Designer</cite>
-    </section>
+.navbar ul {
+  list-style-type: none;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+}
 
-    <section id="seminars" class="section">
-      <h2>Seminars & Certifications</h2>
-      <p>Join our interactive seminars to gain certifications and practical industry knowledge.</p>
-    </section>
+.navbar ul li a {
+  text-decoration: none;
+  color: white;
+  font-size: 1.2em;
+  transition: color 0.3s;
+}
 
-    <section id="contact" class="section">
-      <h2>Contact Us</h2>
-      <p>Email: support@dynamicsonthego.com</p>
-    </section>
+.navbar ul li a:hover {
+  color: #87CEEB; /* Metallic blue */
+}
 
-    <section id="login" class="section">
-      <h2>Login</h2>
-      <form class="login-form">
-        <label for="username">Username:</label>
-        <input type="text" id="username" name="username" required>
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required>
-        <button type="submit">Login</button>
-      </form>
-    </section>
-  </main>
+.search-bar {
+  margin: 10px auto;
+  text-align: center;
+}
 
-  <footer>
-    <p>© 2024 Dynamics On the Go. All rights reserved.</p>
-  </footer>
-  <script>
-    function searchFunction() {
-      alert("Search feature coming soon!");
-    }
-  </script>
-</body>
-</html>
+.search-bar input {
+  padding: 5px;
+  width: 200px;
+}
+
+.search-bar button {
+  padding: 6px 10px;
+  background-color: #d40000; /* Red */
+  border: none;
+  color: white;
+  cursor: pointer;
+}
+
+.search-bar button:hover {
+  background-color: #87CEEB; /* Metallic blue */
+}
+
+.section {
+  padding: 40px;
+  background-color: #ffffff; /* Light background for contrast */
+  color: #333;
+  margin: 20px auto;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  max-width: 800px;
+}
+
+.services-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  justify-content: center;
+}
+
+.service-card {
+  background-color: #1c2b36; /* Army green */
+  color: white;
+  width: 250px;
+  border-radius: 10px;
+  text-align: center;
+  padding: 20px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.service-card img {
+  width: 100%;
+  height: auto;
+  border-radius: 10px;
+}
+
+.service-card h3 {
+  margin: 10px 0;
+  font-size: 1.5em;
+  color: #d40000; /* Red */
+}
+
+.service-card p {
+  font-size: 1em;
+  margin-bottom: 10px;
+}
+
+.service-card .service-link {
+  text-decoration: none;
+  color: #87CEEB; /* Metallic blue */
+  font-weight: bold;
+  transition: color 0.3s;
+}
+
+.service-card .service-link:hover {
+  color: #ffffff; /* White */
+}
+
+footer {
+  background-color: #1c2b36; /* Army green */
+  color: white;
+  text-align: center;
+  padding: 10px;
+}
