--- a/index.html
+++ b/index.html
@@ -52,7 +52,36 @@
           <p>Write compelling resumes tailored for freelance job applications.</p>
           <a href="#resume-writing" class="service-link">Learn More</a>
         </div>
-        <!-- Add more services here -->
+        <div class="service-card">
+          <img src="https://via.placeholder.com/150" alt="Job Search Assistance">
+          <h3>Job Search Assistance</h3>
+          <p>Get help finding freelance opportunities and connecting with clients.</p>
+          <a href="#job-search" class="service-link">Learn More</a>
+        </div>
+        <div class="service-card">
+          <img src="https://via.placeholder.com/150" alt="Social Media Management Training">
+          <h3>Social Media Management Training</h3>
+          <p>Learn how to manage and grow social media accounts for businesses.</p>
+          <a href="#social-media-management" class="service-link">Learn More</a>
+        </div>
+        <div class="service-card">
+          <img src="https://via.placeholder.com/150" alt="Client Communication Skills">
+          <h3>Client Communication Skills</h3>
+          <p>Master effective communication and negotiation with clients.</p>
+          <a href="#client-communication" class="service-link">Learn More</a>
+        </div>
+        <div class="service-card">
+          <img src="https://via.placeholder.com/150" alt="Virtual Assistance Training">
+          <h3>Virtual Assistance Training</h3>
+          <p>Get equipped to manage administrative tasks as a virtual assistant.</p>
+          <a href="#virtual-assistance" class="service-link">Learn More</a>
+        </div>
+        <div class="service-card">
+          <img src="https://via.placeholder.com/150" alt="Project Management Skills">
+          <h3>Project Management Skills</h3>
+          <p>Develop skills to manage freelance projects efficiently.</p>
+          <a href="#project-management" class="service-link">Learn More</a>
+        </div>
       </div>
     </section>
 
