--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <h2>Our Services</h2>
       <div class="services-container">
         <div class="service-card">
-          <img src="https://via.placeholder.com/150" alt="Freelancing Skills Training">
+          <img src="https://etimg.etb2bimg.com/photo/97297322.cms" alt="Freelancing Skills Training">
           <h3>Freelancing Skills Training</h3>
           <p>Develop essential freelancing skills like content writing and graphic design.</p>
           <a href="#skills-training" class="service-link">Learn More</a>
