--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <a href="#skills-training" class="service-link">Learn More</a>
         </div>
         <div class="service-card">
-          <img src="https://via.placeholder.com/150" alt="Portfolio Building">
+          <img src="https://www.careers.govt.nz/assets/get-ideas-for-your-career/_resampled/ScaleWidthWyI3OTUiXQ/2oa6-Building-a-portfolio-career.png" alt="Portfolio Building">
           <h3>Portfolio Building</h3>
           <p>Create a professional portfolio that attracts clients and showcases your work.</p>
           <a href="#portfolio-building" class="service-link">Learn More</a>
