--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <a href="#portfolio-building" class="service-link">Learn More</a>
         </div>
         <div class="service-card">
-          <img src="https://via.placeholder.com/150" alt="Resume Writing Assistance">
+          <img src="https://cdn.kwork.com/pics/t3/97/29825988-653b575581c4d.jpg" alt="Resume Writing Assistance">
           <h3>Resume Writing Assistance</h3>
           <p>Write compelling resumes tailored for freelance job applications.</p>
           <a href="#resume-writing" class="service-link">Learn More</a>
