--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
           <a href="#client-communication" class="service-link">Learn More</a>
         </div>
         <div class="service-card">
-          <img src="https://via.placeholder.com/150" alt="Virtual Assistance Training">
-          <h3>Virtual Assistance Training</h3>
+          <img src="https://miro.medium.com/v2/resize:fit:1400/1*Qqj5p_29dtCjHasa4v4cFg.jpeg" alt="Virtual Assistant Training">
+          <h3>Virtual Assistant Training</h3>
           <p>Get equipped to manage administrative tasks as a virtual assistant.</p>
           <a href="#virtual-assistance" class="service-link">Learn More</a>
         </div>
