--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           <a href="#virtual-assistance" class="service-link">Learn More</a>
         </div>
         <div class="service-card">
-          <img src="https://via.placeholder.com/150" alt="Project Management Skills">
+          <img src="https://www.liveabout.com/thmb/asEdG4uGS_duJf9-ikddzYGHCOg=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/essential-project-manager-skills-2062461-final-300a73f3c77545a89641cc2e17a54bb5.png" alt="Project Management Skills">
           <h3>Project Management Skills</h3>
           <p>Develop skills to manage freelance projects efficiently.</p>
           <a href="#project-management" class="service-link">Learn More</a>
