--- a/index.html
+++ b/index.html
@@ -55,16 +55,17 @@
       <h2>Contact Us</h2>
       <p>Feel free to reach out to us through any of the following means:</p>
       <ul>
-        <li>Email: 
+        <li>
+          <strong>Email:</strong>
           <ul>
-            <li>allellujah@dynamicsonthego.com</li>
-            <li>patrick@dynamicsonthego.com</li>
-            <li>jonathan@dynamicsonthego.com</li>
-            <li>macjill@dynamicsonthego.com</li>
+            <li><a href="mailto:allellujah@dynamicsonthego.com">allellujah@dynamicsonthego.com</a></li>
+            <li><a href="mailto:patrick@dynamicsonthego.com">patrick@dynamicsonthego.com</a></li>
+            <li><a href="mailto:jonathan@dynamicsonthego.com">jonathan@dynamicsonthego.com</a></li>
+            <li><a href="mailto:macjill@dynamicsonthego.com">macjill@dynamicsonthego.com</a></li>
           </ul>
         </li>
-        <li>Phone: +1 (555) 123-4567 (system-generated)</li>
-        <li>Address: 123 Freelancer Lane, Remote City, WorkWorld 10101</li>
+        <li><strong>Phone:</strong> +1 (555) 123-4567</li>
+        <li><strong>Address:</strong> 123 Freelancer Lane, Remote City, WorkWorld 10101</li>
       </ul>
     </section>
 
